...
          .foregroundColor(.white)
          .background(Color("SchemeColor"))
          .cornerRadius(25)
          .font(.system(size: 18, weight: .bold, design: .default))
          Spacer()
          NavigationLink(destination: MainView(stamps: [stamps], stampImage: stampImages)) {
                Text("Next  ->")
              }
          .padding()
          .padding([.leading, .trailing], 50)
          .foregroundColor(.white)
          .background(Color("SchemeColor"))
          .cornerRadius(25)
...
